--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -8,25 +8,23 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
-<<<<<<< Updated upstream
-=======
             background-attachment: fixed;
->>>>>>> Stashed changes
+            /*shorthand - backgraund
+            color, image, position, repeat, size, attachment */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat cove fixed;
+            background-size: cover;
 
         }
 
         main{
             background-color: white;
-<<<<<<< Updated upstream
-            width: 400px;
-=======
             max-width: 400px;
->>>>>>> Stashed changes
             padding: 10px;
             margin: auto;
             border: 1px solid greenyellow;
