--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -14,6 +14,12 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
+        }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: rgb(128, 128, 128);
         }
 
         caption{
@@ -32,9 +38,13 @@
         }
 
         thead, tfoot{
-            background-color: gray;
+            background-color: rgb(128, 128, 128);
             color: white;
             text-align: center;
+        }
+
+        tbody > tr:nth-child(2n){
+            background-color: lightgray;
         }
     </style>
 </head>
